@@ -2,19 +2,17 @@ package com.vaccinex.service;
 
 import com.vaccinex.base.exception.BadRequestException;
 import com.vaccinex.dao.*;
-import com.vaccinex.dto.paging.PagingRequest;
-import com.vaccinex.dto.paging.TransactionPagingResponse;
+import com.vaccinex.dto.response.TransactionResponse;
 import com.vaccinex.dto.request.TransactionCreateRequest;
 import com.vaccinex.dto.request.TransactionUpdateRequest;
 import com.vaccinex.pojo.*;
 import com.vaccinex.pojo.composite.BatchTransactionId;
 import com.vaccinex.pojo.enums.TransactionType;
-import com.vaccinex.utils.PaginationUtil;
 import jakarta.ejb.Stateless;
 import lombok.RequiredArgsConstructor;
 
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 @Stateless
 @RequiredArgsConstructor
@@ -27,33 +25,24 @@ public class TransactionServiceImpl implements TransactionService {
     private final BatchTransactionDao batchTransactionRepository;
 
     @Override
-    public MappingJacksonValue getAllTransactions(PagingRequest request) {
-        PaginationUtil.Pageable pageable = PaginationUtil.getPageable(request);
-        Map<String, String> maps = request.getFilters();
-        maps.remove("pageNo");
-        maps.remove("pageSize");
-        maps.remove("params");
-        maps.remove("sortBy");
-        Specification<Transaction> specification = TransactionPagingResponse.filterByFields(maps);
-        Page<Transaction> transactions = transactionRepository.findAll(specification, pageable);
-        List<TransactionPagingResponse> mappedDTOs = transactions.getContent().stream().map(
-                TransactionPagingResponse::fromEntity
-        ).toList();
-        return PaginationUtil.getPagedMappingJacksonValue(request, transactions, mappedDTOs, "Lấy tất cả giao dịch");
+    public List<TransactionResponse> getAllTransactions() {
+        return transactionRepository.findAll().stream()
+                .map(TransactionResponse::fromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
     public void createTransaction(TransactionCreateRequest request) {
         User doctor = userRepository.findByIdAndDeletedIsFalse(request.doctorId()).orElseThrow(
-                () -> new BadRequestException("Không tìm thấy bác sĩ với ID: " + request.doctorId())
+                () -> new BadRequestException("Doctor not found with ID: " + request.doctorId())
         );
         Vaccine vaccine = vaccineRepository.findById(request.vaccineId()).orElseThrow(
-                () -> new BadRequestException("Không tìm thấy vaccine với ID: " + request.vaccineId())
+                () -> new BadRequestException("Vaccine not found with ID: " + request.vaccineId())
         );
         List<Batch> batches = batchRepository.findByVaccineOrderByExpirationAsc(vaccine);
         int totalAmountInBatches = batches.stream().mapToInt(Batch::getQuantity).sum();
         if (request.quantityTaken() > totalAmountInBatches) {
-            throw new BadRequestException("Số lượng vượt quá tổng số lượng vaccine!");
+            throw new BadRequestException("Quantity exceeds total available vaccine amount!");
         }
         Transaction transaction = Transaction.builder()
                 .date(request.date())
@@ -82,16 +71,15 @@ public class TransactionServiceImpl implements TransactionService {
             batchTransactionRepository.save(batchTransaction);
             batchIndex++;
         }
-
     }
 
     @Override
     public void updateTransaction(Integer transactionId, TransactionUpdateRequest request) {
         Transaction transaction = transactionRepository.findByIdAndDeletedIsFalse(transactionId).orElseThrow(
-                () -> new BadRequestException("Không tìm thấy giao dịch với ID: " + transactionId)
+                () -> new BadRequestException("Transaction not found with ID: " + transactionId)
         );
         User doctor = userRepository.findByIdAndDeletedIsFalse(request.doctorId()).orElseThrow(
-                () -> new BadRequestException("Không tìm thấy bác sĩ với ID: " + request.doctorId())
+                () -> new BadRequestException("Doctor not found with ID: " + request.doctorId())
         );
         transaction.setDate(request.date());
         transaction.setDoctor(doctor);
@@ -101,7 +89,7 @@ public class TransactionServiceImpl implements TransactionService {
     @Override
     public void deleteTransaction(Integer id) {
         Transaction transaction = transactionRepository.findByIdAndDeletedIsFalse(id).orElseThrow(
-                () -> new BadRequestException("Không tìm thấy giao dịch với ID: " + id)
+                () -> new BadRequestException("Transaction not found with ID: " + id)
         );
         transaction.setDeleted(true);
         transactionRepository.save(transaction);
